# crag-web-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  notes.md  request.py  stress_test.py
crag-web/: Cargo.toml
crag-web/examples/database/: Cargo.toml  user_sessions.db
crag-web/examples/portfolio/: Cargo.toml
crag-web/examples/portfolio/src/: main.rs
crag-web/examples/portfolio/static/html/: 404.html  index.html
crag-web/src/: db.rs  handler.rs  lib.rs  methods.rs  request.rs  response.rs  routes.rs  server.rs  threadpool.rs
crag-web/tests/: index.rs
hello/: Cargo.toml
hello/src/: main.rs
portfolio/: Cargo.toml
portfolio/src/: main.rs
static/html/: 404.html  hello.html
tcp-server/: .gitignore
tcp-server/examples/portfolio/: Cargo.toml
tcp-server/examples/portfolio/src/: main.rs
tcp-server/src/: handler.rs  handlers.rs  lib.rs  main.rs  request.rs  response.rs  server.rs  threadpool.rs
tcp-server/static/html/: 404.html
