[package]
name = "crag-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
lazy_static = "1.4.0"
tracing = "0.1.40"

[dev-dependencies]
anyhow = "1.0.83"
features = "0.10.0"
full = "0.1.0"
reqwest = "0.12.4"
tokio = { version = "1.37.0", features = ["full"] }
